# en

./: .gitignore  feature-function-ideas.md  project-context.md
.claude/: settings.json
app/: .env.release.example  index.html  package-lock.json  package.json  release.sh
app/src/: App.css  App.tsx  GridResizeHandles.tsx  Terminal.tsx  events.ts  (+5 more)
app/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns  source-icon-render.html
app/src-tauri/src/: appearance.rs  env.rs  events.rs  hooks.rs  lib.rs  main.rs  path_env.rs  pty.rs
mockups/: 00-hub.html  01-classic-dock.html  02-vertical-hive.html  03-control-panel.html  04-conveyor.html  05-honeycomb-grid.html  06-rack-mount.html  07-channel-strip.html  08-departures-board.html  09-apiary-frames.html  10-astromech-bay.html  11-pollinator-almanac.html  12-beekeepers-frames.html  13-mission-patch-board.html  14-signal-tower.html  15-astromech-tower.html  16-solari-concourse.html  17-hangar-floorplan.html  18-dispatch-tower.html  19-workshop-bench.html  20-signal-mast.html  21-astromech-trench.html  22-solari-manifest.html  23-droid-blueprint.html  24-mech-bee-hangar.html  25-live-grid.html  26-warm-paper.html  27-everforest-dusk.html  28-rose-pine-moon.html  29-rose-pine-moon.html  30-everforest-light-paper.html  31-solarized-deep-teal.html  32-rose-pine-moon.html  33-everforest-paper.html  34-kanagawa-sumi.html  35-themed-grid.html  36-textures.html  37-needs-pulse-preview.html  38-attention-styles.html  39-katana-variants.html  (+25 more)
(+3 files in other folders)
